--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "vitest": "^1.3.1"
   }
 }
