--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "avos",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Stuff",
   "main": "index.js",
   "scripts": {
-    "test": "vitest --run"
+    "test": "vitest --run",
+    "test:ui": "vitest --ui",
+    "test:verbose": "vitest --reporter=verbose"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitest/ui": "^1.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.3.1"
+    "vitest": "^1.4.0",
+    "@vitest/coverage-v8": "^1.4.0",
+    "vue": "^3.4.21"
   }
 }
