--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "avos",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Stuff",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "typescript": "^5.3.3",
     "vitest": "^1.4.0",
     "@vitest/coverage-v8": "^1.4.0",
+    "svelte": "^4.2.12",
     "vue": "^3.4.21"
   }
 }
