--- a/envtool/envfriend/tsconfig.json
+++ b/envtool/envfriend/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "NodeNext",
-    "lib": ["ESNext", "DOM"],
-    "skipLibCheck": true,
+     "lib": ["ESNext", "DOM"],
+  
+    "skipLibCheck": false,
 
     /* Bundler mode */
     "moduleResolution": "NodeNext",
@@ -19,5 +20,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "node_modules"
+  ]
 }
